--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
   width: 2em;
   height: 2em;
   margin-right: .5rem;
+  background-color: #522806;
 }
 
 .masthead span {
@@ -63,6 +64,7 @@ body {
   grid-template-areas: "banner";
   color: #fff;
   font-size: 1.5rem;
+  background-color: #522806;
 }
 
 .banner img {
